<resources>
    <string name="app_name">Buddiz</string>
    <string name="log_in_header">התחברות</string>
    <string name="settings_header">הגדרות</string>
    <string name="settings_info_edit_header">עריכת מידע</string>
    <string name="info_edit_header">ערוך מידע</string>
    <string name="settings_info_edit_name_btn">שם</string>
    <string name="personal_code">קוד אישי</string>
    <string name="username">שם משתמש</string>
    <string name="password">סיסמה</string>
    <string name="settings_info_edit_btn">עריכת מידע</string>
    <string name="settings_info_share_btn">שיתוף מידע</string>
    <string name="settings_password_change_btn">שינוי סיסמה</string>
    <string name="settings_delete_account_btn">מחק את חשבונך</string>
    <string name="signup">הרשמה</string>
    <string name="verify_password">אימות סיסמה</string>
    <string name="verify">אישור</string>
    <string name="missing_fields_err_msg">אנא הזן קוד אישי</string>
    <string name="matches">התאמות אפשריות</string>
    <string name="skip">דלג</string>
    <string name="whats_this"><u>מה זה?</u></string>
    <string name="whats_this_msg">"הקוד הראשוני שהתקבל מגהה"</string>
    <string name="findMatch">מצא התאמה</string>
    <string name="religious">דת</string>
    <string name="gender">מגדר</string>
    <string name="additional_info">אודות</string>
    <string name="language">שפה</string>
    <string name="languages">שפות</string>
    <string name="wrong_credentials_err">"המשתמש לא קיים או שהסיסמה לא נכונה"</string>

    <string-array name="chat_preferences">
        <item>לא משנה</item>
        <item>מטופל עבר</item>
        <item>בן משפחה של מטופל עבר</item>
    </string-array>

    <string-array name="gender_preferences">
        <item>לא משנה</item>
        <item>זכר</item>
        <item>נקבה</item>
    </string-array>

    <string-array name="religious_preferences">
        <item>לא משנה</item>
        <item>דתי</item>
        <item>מסורתי</item>
        <item>חילוני</item>
        <item>ערבי</item>
    </string-array>

    <string-array name="age_preferences">
        <item>לא משנה</item>
        <item>0–19</item>
        <item>20–29</item>
        <item>30–39</item>
        <item>40–49</item>
        <item>50+</item>
    </string-array>

    <string name="title_activity_settings">הגדרות</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string-array name="languages">
        <item>עברית</item>
        <item>אנגלית</item>
        <item>צרפתית</item>
        <item>ערבית</item>
        <item>רוסית</item>
        <item>אמהרית</item>
    </string-array>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>
    <!-- Example settings for Data & Sync -->

    <!-- Example settings for Notifications -->

    <string name="birth_date">תאריך לידה</string>
    <string name="search">חיפוש</string>
    <string name="no_results">אין תוצאות</string>
    <string name="you_may_return_and_edit">ניתן לחזור ולערוך את המידע בכל שלב</string>
    <string name="ok_label">שמור</string>
    <string name="dismiss_label">חזור</string>
    <string name="clear_all_label">נקה הכל</string>
    <string name="select_all_label">בחר הכל</string>
    <string name="agree">כן</string>
    <string name="dont_agree">לא</string>

    <string-array name="months_array">
        <item>ינואר</item>
        <item>פברואר</item>
        <item>מרץ</item>
        <item>אפריל</item>
        <item>מאי</item>
        <item>יוני</item>
        <item>יולי</item>
        <item>אוגוסט</item>
        <item>ספטמבר</item>
        <item>אוקטובר</item>
        <item>נובמבר</item>
        <item>דצמבר</item>
    </string-array>
    <string name="headline_about">המטרה שלנו</string>
    <string name="info_our_purpose">לספק תמיכה לשוהי המרכז הרפואי גהה ומשפחותיהם על ידי מטופלי עבר ומשפחותיהם.\nאפליקציה זו מאפשרת לשוחח באנונימיות מוחלטת עם מטופלי עבר בגהה ועם קרובי משפחה של מטופלי עבר.\nשימוש באפליקציה מותנה באישור של גהה.</string>
    <string name="terms_of_use_headline">תנאי שימוש</string>
    <string name="terms_of_use">נא להתבטא בצורה הולמת בשיחות עם אנשים אחרים.\nנא להשתמש באפליקציה אך ורק למטרתה המיועדת.\nשימוש באפליקציה מותנה באישור מכון בריאות הנפש גהה</string>
    <string name="about_button">אודות</string>
    <string name="done">סיימתי</string>
    <string name="strings_delete_account">מחק חשבון</string>
    <string name="strings_password_change">שנה סיסמה</string>
    <string name="strings_succ_login">התחברת בהצלחה!</string>
    <string name="vecteezy">תודה לvecteezy שסיפקו לנו תמונות עם רישיון לשימוש חוזר</string>
    <string name="profile">פרופיל אישי</string>
    <string name="transition_string">profile_zoom</string>
    <string name="age_range_text">טווח גילים</string>
    <string name="loading">טוען...</string>
    <string name="share_info">שתף מידע</string>
    <string name="strings_filter_desc">מלא/י את הפרטים הבאים על האדם שאיתו תרצה/י לשוחח, על מנת שנוכל למצוא לך את ההתאמה הטובה ביותר.</string>
    <string name="strings_filter_create_conv">יצירת שיחה חדשה</string>
    <string name="strings_filter_basic_info">פרטים בסיסיים</string>
    <string name="strings_filter_choose_lang">בחירת שפה</string>
    <string name="strings_filter_lang_desc">בחר/י את השפות בהן תרצה/י לשוחח.\nאי בחירה שקול להסכמה לשוחח בכל השפות.</string>
    <string name="strings_register">נרשם</string>
    <string name="strings_please_wait">אנא המתן...</string>
    <string name="strings_reg_ex">בעיה בהרשמה:</string>
    <string name="strings_error">אירעה שגיאה, נסה שוב מאוחר יותר.</string>
    <string name="share_info_header">שיתוף מידע</string>

    <string name="navigation_drawer_open">פתח תפריט</string>
    <string name="navigation_drawer_close">סגור תפריט</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="new_conversation">התחל שיחה חדשה</string>
    <string name="Menu">תפריט</string>
    <string name="looking_for_matches">מחפש התאמות אפשריות</string>
    <string name="available">זמין לקבלת בקשות שיחה חדשות</string>
    <string name="not_available">לא זמין לקבלת בקשות שיחה חדשות</string>
</resources>
