...
                android:text="@string/signup"
                android:textColor="@color/white"
                android:textSize="25sp" />

            <EditText
                android:textColor="@color/white"
                android:id="@+id/user_name"
                android:layout_width="200dp"
                android:layout_height="40dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/rounded_edittext"
                android:drawableStart="@drawable/person"
                android:hint="@string/username"
...
